# HPC

./: README.md
Lab01/: simple_measure.md
Lab01/code/: CMakeLists.txt
Lab01/code/include/: ecg_processing.h
Lab01/code/scripts/: hyperfine_size.sh  visualize_ecg_modified.py  visualize_ecg_v2.py
Lab01/code/src/: ecg_processing.c  main.c
Lab01/report/: rapport.md
Lab02/: HPC.txt  transfer.md
Lab02/rapport/: note.md  rapport.md  rapport_complet.md
Lab02/script/: input.txt
Lab03/code/example_1/: not_optimized.c  optimized_by_student.c
Lab03/code/example_2/: not_optimized.c  optimized_by_student.c
Lab03/code/example_3/: not_optimized.c  optimized_by_compiler.c  optimized_by_student.c
Lab03/rapport/: rapport.md
Lab04/: CMakeLists.txt  perf.data
Lab04/backup/: main_SoA.c
Lab04/rapport/: rapport.md  result.md
Lab04/src/: exercice.c
Lab05/: CMakeLists.txt
Lab05/rapport/: rapport.md  result.md
Lab05/src/: case1.c  case2.c  case3.c  case4.c
Lab06/: powercap.zip:Zone.Identifier
Lab07/: rapport.md
Lab07/code/: CMakeLists.txt
Lab07/code/inputs/: input.txt  input.txt:Zone.Identifier
Lab07/code/src/: main_mono.c  main_multi.c
